--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html lang="">
 
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title></title>
+  <title>Vera POC</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -38,6 +38,7 @@
           te vragen.
           Voorbeeld: een rit voor maandag kan online aangevraagd worden tot de donderdag voordien VOOR 13.30 uur.
           Items met een rood sterretje (<span class="red">*</span>) zijn verplicht in te vullen.</p>
+
         <form id="frmRit">
           <div class="form-group">
             <div class="row">
@@ -50,6 +51,7 @@
               </div>
             </div>
           </div>
+
           <div class="form-group">
             <div class="row">
               <div class="col-md-3">
@@ -238,75 +240,79 @@
                   </div>
                 </div>
               </div>
+          </div>
+
+
+          <div style="max-width: 560px; height: 400px">
+            <div id="map"></div>
+          </div>
+          <hr>
+
+          <div class="form-group">
+            <div class="row">
+              <div class="col-md-3">
+                <label for="voornaam_aanvrager">Aanvrager <span class="red">*</span></label>
+              </div>
+              <div class="col-md-2">
+                <input type="text" class="form-control form-control-sm" id="voornaam_aanvrager" placeholder="Voornaam" required>
+              </div>
+              <div class="col-md-3">
+                <input type="text" class="form-control form-control-sm" id="naam_aanvrager" placeholder="Naam" required>
+              </div>
             </div>
+          </div>
 
-            <hr>
+          <div class="form-group">
+              <div class="row">
+                <div class="col-md-3">
+                  <label for="tel_aanvrager">GSM / Telefoon aanvrager <span class="red">*</span></label>
+                </div>
+                <div class="col-md-5">
+                  <input type="tel" class="form-control form-control-sm" id="zone_aanvrager" aria-describedby="zonenr" placeholder="011"
+                  minlength="9" maxlength="11" pattern="[0-9]{2,4}-[0-9]{6,7}" required>
+                  <small id="telHelp" class="form-text text-muted">bv. 011-121212 / 0476-985848</small>
+                </div>
+              </div>
+          </div>
 
-            <div class="form-group">
-                <div class="row">
-                  <div class="col-md-3">
-                    <label for="voornaam_aanvrager">Aanvrager <span class="red">*</span></label>
-                  </div>
-                  <div class="col-md-2">
-                    <input type="text" class="form-control form-control-sm" id="voornaam_aanvrager" placeholder="Voornaam" required>
-                  </div>
-                  <div class="col-md-3">
-                    <input type="text" class="form-control form-control-sm" id="naam_aanvrager" placeholder="Naam" required>
+          <div class="form-group">
+              <div class="row">
+                <div class="col-md-3">
+                  <label for="adres_org">Adres van de organisatie die de aanvraag doet</label>
+                </div>
+                <div class="col-sm-4">
+                  <input type="text" class="form-control form-control-sm" id="straat_org" />
+                  <small>Straat en huisnummer</small>
+                  <input type="text" class="form-control form-control-sm" id="gemeente_org" />
+                  <small>Gemeente</small>
+                  <div class="row">
+                    <div class="col-sm-6">
+                      <input type="text" class="form-control form-control-sm" id="postcode_org" />
+                      <small>Postcode</small>
+                    </div>
+                    <div class="col-sm-6">
+                      <select name="land_bestemming" id="land_org" class="form-control form-control-sm">
+                        <option value=""></option>
+                        <option value="Belgie">Belgie</option>
+                        <option value="Nederland">Nederland</option>
+                      </select>
+                      <small>Land</small>
+                    </div>
                   </div>
                 </div>
               </div>
+          </div>
 
-              <div class="form-group">
-                  <div class="row">
-                    <div class="col-md-3">
-                      <label for="tel_aanvrager">GSM / Telefoon aanvrager <span class="red">*</span></label>
-                    </div>
-                    <div class="col-md-5">
-                      <input type="tel" class="form-control form-control-sm" id="zone_aanvrager" aria-describedby="zonenr" placeholder="011"
-                      minlength="9" maxlength="11" pattern="[0-9]{2,4}-[0-9]{6,7}" required>
-                      <small id="telHelp" class="form-text text-muted">bv. 011-121212 / 0476-985848</small>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="form-group">
-                    <div class="row">
-                      <div class="col-md-3">
-                        <label for="adres_org">Adres van de organisatie die de aanvraag doet</label>
-                      </div>
-                      <div class="col-sm-4">
-                        <input type="text" class="form-control form-control-sm" id="straat_org" />
-                        <small>Straat en huisnummer</small>
-                        <input type="text" class="form-control form-control-sm" id="gemeente_org" />
-                        <small>Gemeente</small>
-                        <div class="row">
-                          <div class="col-sm-6">
-                            <input type="text" class="form-control form-control-sm" id="postcode_org" />
-                            <small>Postcode</small>
-                          </div>
-                          <div class="col-sm-6">
-                            <select name="land_bestemming" id="land_org" class="form-control form-control-sm">
-                              <option value=""></option>
-                              <option value="Belgie">Belgie</option>
-                              <option value="Nederland">Nederland</option>
-                            </select>
-                            <small>Land</small>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="form-group">
-                    <div class="row">
-                      <div class="col-md-3">
-                        <label for="info">Aanvullende info</label>
-                      </div>
-                      <div class="col-md-9">
-                        <textarea name="info" id="info" cols="50" rows="5" class="form-control form-control-sm"></textarea>
-                      </div>
-                    </div>
-                  </div>
+          <div class="form-group">
+            <div class="row">
+              <div class="col-md-3">
+                <label for="info">Aanvullende info</label>
+              </div>
+              <div class="col-md-9">
+                <textarea name="info" id="info" cols="50" rows="5" class="form-control form-control-sm"></textarea>
+              </div>
+            </div>
+          </div>
 
 
           <button type="submit" class="btn btn-primary">Rit aanvragen</button>
@@ -314,12 +320,26 @@
     </div>
 
     </form>
-  </div>
-  </div>
-  <div class="row footer"></div>
+
+    <div class="row footer ml-2 white">
+      <div class="col-md-12">
+        <small>&copy; 2018 - QNH</small>
+      </div>
+    </div>
   </div>
 
-
+    <script>
+      var map;
+      function initMap() {
+        map = new google.maps.Map(document.getElementById('map'), {
+          center: {lat: -34.397, lng: 150.644},
+          zoom: 8
+        });
+        console.log(map);
+      }
+    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBGoOKZpGSSHICBi1uM1bzOzdxfqKPdwOg&callback=initMap"
+    async defer></script>
 
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
